--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
+    "@feathersjs/client": "^3.7.5",
     "chalk": "2.4.1",
     "compression": "1.7.3",
     "connected-react-router": "4.5.0",
     "cross-env": "5.2.0",
     "express": "4.16.4",
+    "feathers-redux": "^3.0.0",
     "fontfaceobserver": "2.0.13",
     "history": "4.7.2",
     "hoist-non-react-statics": "3.0.1",
@@ -83,10 +85,14 @@
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
+    "redux-actions": "^2.6.4",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.2",
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.83.0",
+    "socket.io-client": "^2.1.1",
     "styled-components": "4.0.2",
     "warning": "4.0.2"
   },
